--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,6 @@
-:host { display: block; height: 100%; }
+:host {
+  display: block;
+  height: 100%;
+  position: relative;
+  padding-top: 50px;
+}
