--- a/src/app/todo/components/board/board.component.html
+++ b/src/app/todo/components/board/board.component.html
@@ -1,23 +1,28 @@
 <mat-grid-list [cols]="columns.length" [style]="{'min-width': this.gridMinWidth}" rowHeight="1:1">
-  @for(col of columns; track col.name) {
+  @for(col of columns; track col.name + col.id) {
       <mat-grid-tile>
         <app-editable [text]="col.name" (onChange)="this.onEditColName($event, col)">
           <h3>{{ col.name }}</h3>
           <mat-icon aria-hidden="false" class="remove" fontIcon="close" (click)="this.onDeleteColumn(col)"></mat-icon>
         </app-editable>
         
-        @for(ticket of tickets[col.id]; track ticket.title) {
-          <app-ticket
-            [ticket]="ticket"
-            (onDeleteTicket)="this.onDeleteTicket($event)"
-            (onEditTicket)="this.onEditTicket($event)"
-          ></app-ticket>
-        }
-        <button mat-stroked-button>Create Ticket</button>
+        <section class="ticket-list">
+          @for(ticket of tickets[col.id]; track ticket.title + ticket.id) {
+            <app-ticket
+              [ticket]="ticket"
+              (onDeleteTicket)="this.onDeleteTicket($event)"
+              (onEditTicket)="this.onEditTicket($event)"
+            ></app-ticket>
+          }
+        </section>
+
+        <button mat-flat-button class="create-ticket-button" (click)="this.onCreateTicket(col.id)">Create Ticket</button>
       </mat-grid-tile>
   }
 
-  <button class="create-column" mat-flat-button>Create new column</button>
+  <a (click)="this.onTelegram()" class="telegram-share-button">
+    <img src="/telegram-icon.png" alt="telegram share icon">
+  </a>
+  <button class="create-column" (click)="this.onCreateColumn()" mat-flat-button>Create new column</button>
 
 </mat-grid-list>
-
