--- a/src/app/todo/components/board/board.component.scss
+++ b/src/app/todo/components/board/board.component.scss
@@ -11,37 +11,65 @@ mat-grid-tile {
     padding: 3px;
   }
 
+  .ticket-list {
+    width: 100%;
+    max-height: calc(100vh - 290px);
+    overflow-y: auto;
+  }
+
   h3 {
-    color: #ffd54f;
-    background: #0000008c;
-    padding: 14px 16px;
+    color: orange;
+    background: #000000c3;
+    padding: 6px 16px;
     font-size: 13px !important;
     border-radius: 6px;
     font-weight: bold !important;
     width: 100%;
     text-align: center;
     text-transform: uppercase;
+    margin-bottom: 0 !important;
   }
 
-  button[mat-stroked-button] {
+  .create-ticket-button {
+    margin-top: 15px;
     width: 100%;
+    background-color: orange !important;
   }
 }
 
 mat-grid-list {
   height: 100%;
 
+  .telegram-share-button {
+    position: fixed;
+    bottom: 67px;
+    left: calc(50% - 30px);
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    border: 2px solid #ddd9d9;
+    border-radius: 6px;
+
+    img {
+      width: 100%;
+    }
+  }
+
   .create-column {
-    background-color: #ffd54f !important;
-    width: calc(100% - 10px);
+    background-color: orange !important;
+    width: 50%;
     position: fixed;
     bottom: 10px;
-    left: 5px;
+    left: 25%;
     text-transform: uppercase;
     font-weight: bold;
+    font-size: 18px;
+    height: 50px;
+    border: 2px solid #ddd9d9;
 
     .mdc-button__label {
-      color: #949191;
+      color: #f0ecec;
+      text-shadow: 1px 2px 2px black;
     }
   }
 }
