--- a/src/app/todo/components/root/root.component.html
+++ b/src/app/todo/components/root/root.component.html
@@ -1,2 +1,5 @@
-<mat-spinner *ngIf="this.loading"></mat-spinner>
+<div class="spinner-modal" *ngIf="this.loading">
+  <mat-spinner></mat-spinner>
+</div>
+
 <router-outlet></router-outlet>
