--- a/src/app/todo/components/tickets/ticket/ticket.component.scss
+++ b/src/app/todo/components/tickets/ticket/ticket.component.scss
@@ -1,10 +1,14 @@
 :host { display: block; width: 100%; }
 mat-card {
-  margin-bottom: 8px;
+  margin-top: 15px;
 
   section.card-header {
     flex: 1;
     width: 100%;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    justify-content: center;
   }
 
   mat-spinner {
@@ -33,10 +37,11 @@ mat-card {
   }
 
   &.completed {
-    background-color: rgba(0, 0, 0, 0.15);
+    background-color: rgba(0, 0, 0, 0.75);
 
     mat-card-title {
       text-decoration: line-through;
+      color: #cccaca;
     }
   }
 }
