--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 body {
-  background: rgba(188, 188, 188, 0.3);
+  background-color: rgba(188, 188, 188, 0.3);
+  background-image: url('/repeat.webp');
+  background-position: center;
+  background-repeat: repeat;
+  background-size: auto;
 }
 
 mat-icon.remove {
@@ -19,8 +23,79 @@ mat-icon.remove {
   top: 4px;
   cursor: pointer;
   transform: scale(0.8);
+  color: #999999;
 
   &:hover {
     background-color: rgba(0, 0, 0, 0.25);
   }
 }
+
+.spinner-modal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 5;
+}
+
+mat-spinner circle, .mat-spinner circle {
+  stroke: orange !important;
+}
+
+.animation-bg-button {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: orange;
+  text-transform: uppercase;
+  box-shadow: 10px 10px 0 0 rgba(104, 104, 104, 0.6);
+  cursor: pointer;
+  transition: all .3s ease;
+  overflow: hidden;
+  position: relative;
+
+  &::before {
+    background-color: rgba(67, 67, 67, 0.7);
+    width: 200%;
+    height: 400%;
+    top: -100%;
+    right: 0;
+    position: absolute;
+    content: '';
+    transition: all .4s ease;
+    rotate: 65deg;
+    z-index: -1;
+  }
+
+  &:hover {
+    box-shadow: none !important;
+
+    &::before {
+      right: -120%;
+    }
+  }
+}
+
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #d68800 #343232;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #343232;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #d68800;
+    border-radius: 5px;
+    border: 2px solid #5e5e5e;
+  }
