--- a/src/app/todo/components/tickets/ticket/ticket.component.scss
+++ b/src/app/todo/components/tickets/ticket/ticket.component.scss
@@ -2,6 +2,16 @@
 mat-card {
   margin-top: 15px;
 
+  mat-card-header {
+    max-width: calc(100% - 50px);
+
+    @media screen and (max-width: 780px) {
+      display: block;
+      max-width: calc(100% - 10px);
+      padding: 8px !important;
+    }
+  }
+
   section.card-header {
     flex: 1;
     width: 100%;
@@ -9,6 +19,10 @@ mat-card {
     align-items: center;
     height: 100%;
     justify-content: center;
+
+    @media screen and (max-width: 780px) {
+      // margin-bottom: 10px;
+    }
   }
 
   mat-spinner {
@@ -24,6 +38,7 @@ mat-card {
   mat-card-title {
     line-height: normal;
     text-align: center;
+    overflow-x: auto;
   }
 
   .mat-mdc-card-header {
@@ -34,6 +49,11 @@ mat-card {
     display: flex;
     align-items: center;
     justify-content: center;
+
+    @media screen and (max-width: 780px) {
+      padding: 0;
+      min-height: 20px;
+    }
   }
 
   &.completed {
