--- a/src/app/todo/components/root/root.component.html
+++ b/src/app/todo/components/root/root.component.html
@@ -1,4 +1,4 @@
-<div class="spinner-modal" *ngIf="this.loading">
+<div class="spinner-modal" *ngIf="this.roomService.isLoading | async">
   <mat-spinner></mat-spinner>
 </div>
 
